--- a/package.json
+++ b/package.json
@@ -17,11 +17,22 @@
   },
   "homepage": "https://github.com/dhickie/hickhub-app#readme",
   "dependencies": {
+    "cross-fetch": "^1.1.1",
     "express": "^4.16.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-redux": "^5.0.6",
     "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0",
     "request": "^2.83.0",
     "semantic-ui-react": "^0.77.2"
+  },
+  "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "path": "^0.12.7",
+    "webpack": "^3.10.0"
   }
 }
