--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "User website for HickHub",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "babel-node index.js --presets es2015,stage-2"
   },
   "repository": {
     "type": "git",
@@ -28,10 +29,12 @@
     "semantic-ui-react": "^0.77.2"
   },
   "devDependencies": {
+    "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
     "path": "^0.12.7",
     "webpack": "^3.10.0"
   }
