--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "babel-node index.js --presets es2015,stage-2"
+    "start": "babel-node src/index.js --presets es2015,stage-2",
+    "build": "babel src -d bin --presets es2015,stage-2",
+    "buildfront": ".\\node_modules\\.bin\\webpack -d",
+    "serve": "node bin/index.js"
   },
   "repository": {
     "type": "git",
@@ -32,7 +35,7 @@
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
-    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-env": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "path": "^0.12.7",
