--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/dhickie/hickhub-app#readme",
   "dependencies": {
+    "body-parser": "^1.18.2",
     "cross-fetch": "^1.1.1",
     "express": "^4.16.2",
     "react": "^16.2.0",
