--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "cross-fetch": "^1.1.1",
+    "dotenv": "^5.0.1",
     "express": "^4.16.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
